2015-07-29  Mark Wielaard  <mjw@redhat.com>

	* run-unstrip-test3.sh: New test.
	* testfile-info-link.bz2: New file.
	* testfile-info-link.debuginfo.bz2: Likewise.
	* testfile-info-link.stripped.bz2: Likewise.
	* Makefile.am (TESTS): Add run-unstrip-test3.sh.
	(EXTRA_DIST): Add run-unstrip-test3.sh, testfile-info-link.bz2,
	testfile-info-link.debuginfo.bz2, testfile-info-link.stripped.bz2.

2015-06-27  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/run-deleted.sh: Skip when detecting a not implemented
	dwfl_linux_proc_attach.

2015-06-27  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/dwfl-bug-fd-leak.c (elfutils_open): Check for null results of
	dwfl_addrmodule.

2015-06-26  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/vdsosyms.c [!__linux__] (main): Mark argv as unused.

2015-06-26  Pino Toscano  <toscano.pino@tiscali.it>

	* tests/backtrace-data.c: Reduce scope of some includes to match their
	usage.
	* tests/backtrace.c: Likewise.
	* tests/deleted.c: Likewise.

2015-06-16  Mark Wielaard  <mjw@redhat.com>

	* run-strip-test.sh: Add strip-in-place (eu-strip without -o) test
	for non-ET_REL files.

2015-05-30  Mark Wielaard  <mjw@redhat.com>

	* backtrace-subr.sh (check_native_core): Notice core file couldn't be
	generated before skipping.
	* run-addr2line-i-demangle-test.sh: Notice demangler is unsupported
	before skipping.
	* run-backtrace-demangle.sh: Likewise.
	* run-stack-demangled-test.sh: Likewise.
	* run-backtrace-native-biarch.sh: Notice biarch testing is disabled
	before skipping.
	* run-backtrace-native-core-biarch.sh: Likewise.
	* test-subr.sh (testfiles): Notice how bunzip2 fails before skipping.

2015-05-20  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-i-test.sh: Add pretty test.
	* run-addr2line-test.sh: Likewise.

2015-05-20  Mark Wielaard  <mjw@redhat.com>

	* run-addr2line-i-demangle-test.sh: New test.
	* Makefile.am (TESTS): Add run-addr2line-i-demangle-test.sh.
	(EXTRA_DIST): Likewise.
